--- a/src/styles.scss
+++ b/src/styles.scss
@@ -8,6 +8,11 @@
     overflow: scroll;
 }
 
+.mat-dialog-container {
+    background-color: #ebebed;
+    opacity: 1;
+}
+
 html, body {
     height: 100%;
 }
