--- a/src/app/accessory/accessory.component.scss
+++ b/src/app/accessory/accessory.component.scss
@@ -16,3 +16,8 @@
 .addShadow:hover {
     box-shadow: 0 0 8px rgba(0, 0, 0, 0.45);
 }
+
+.btn:hover {
+    background-color: white;
+    border-color: rgba(97, 127, 183, .8);
+}
