--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -5,3 +5,34 @@
 .addShadow:hover {
     box-shadow: 0 0 8px rgba(0, 0, 0, 0.45);
 }
+
+.float-container {
+    padding: 20px;
+    overflow-x:scroll;
+    background-color:#e5e5e5;
+    transform: translate(5%);
+    max-width: 80%;
+}
+
+.float-child {
+    float: left;
+    width: 1740px;
+}  
+
+.divider {
+    width: 25px;
+    height: auto;
+    display: inline-block;
+}
+
+.entryCard {
+    max-width:200px;
+    border-width:1px;
+    background-color:white;
+    border-width: 0px;
+}
+
+.entryCard:hover {
+    border-width: 1px;
+    border-color: rgba(97, 127, 183, .8);
+}
