--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,5 +1,9 @@
 .mainPage {
-    background-color: #ebebed;
+    // background-color: #ebebed;
+    background-image: linear-gradient(to top, rgba(235, 235, 237, 1), rgba(235, 235, 237, 1), rgb(124, 147, 188, .3), rgba(97, 127, 183, 1));
+    background-position: top;
+    background-repeat: no-repeat;
+    background-size: cover;
     width: 100%;
     height: 100%;
     position: absolute;
